# NeonTestAndroid

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/finalreality/neontestandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FirstNeonTest.cpp  FirstNeonTest.h  log.h  native-lib.cpp
app/src/main/java/com/finalreality/neontestandroid/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/finalreality/neontestandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
